# EarTrumpet_and_EQAPO_with_GenAI

./: .gitignore
EarTrumpet.Package/: Package.appxmanifest
gemini_test/: env_set.bat
gemini_test/C++/: CMakeLists.txt  Makefile  main.cpp  text_config_ver.cpp
